--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,16 @@
   <build>
     <finalName>cjpcloud</finalName>
   </build>
+ <distributionManagement>
+  <repository>
+     <id>mahi</id>
+     <name>Internal Releases</name>
+     <url>http://34.194.202.78:8888/nexus-latest/content/repositories/releases/</url>
+  </repository>
+  <snapshotRepository>
+     <id>mahi</id>
+     <name>Internal Releases</name>
+     <url>http://34.194.202.78:8888/nexus-latest/content/repositories/snapshots/</url>
+  </snapshotRepository>
+</distributionManagement>
 </project>
